--- a/src/edge-router/traefik.toml
+++ b/src/edge-router/traefik.toml
@@ -24,6 +24,12 @@ entryPoint = "http"
         method = "wrr"
       [backends.web1.servers.server1]
         url = "http://storefront:8080"
+    # media
+    [backends.assets1]
+      [backends.assets1.loadbalancer]
+        method = "wrr"
+      [backends.assets1.servers.server1]
+        url = "http://assets:3000"
 
   [frontends]
     [frontends.api]
@@ -34,4 +40,9 @@ entryPoint = "http"
     [frontends.web1]
       backend = "web1"
       entrypoints = ["http"]
+    [frontends.assets1]
+      backend = "assets1"
+      entrypoints = ["http"]
+      [frontends.assets1.routes.test1]
+        rule = "PathPrefixStrip:/assets/"
 
