fix randomly generated schema credentials with leading numeric

--- a/deploy/complete/helm-chart/provision/templates/secrets-global.yaml
+++ b/deploy/complete/helm-chart/provision/templates/secrets-global.yaml
@@ -2,7 +2,7 @@
 {{- $oadbWalletPw := .Values.global.oadbWalletPassword | default (randAlphaNum 12) }}
 {{- $oadbName := .Values.global.oadbName | default (printf "mushop%s" (randAlphaNum 12)) }}
 {{- $oadbUser := .Values.global.oadbUser | default (printf "user%s" (randAlphaNum 12)) }}
-{{- $oadbPw := .Values.global.oadbPassword | default (printf "%s" (randAlphaNum 12)) }}
+{{- $oadbPw := .Values.global.oadbPassword | default (printf "%s%s" (randAlpha 1) (randAlphaNum 12)) }}
 
 {{/* If we need to create a global ATP instance to be used by other services */}}
 {{ if .Values.global.osb.atp }}
