--- a/deploy/complete/helm-chart/provision/templates/secrets-services.yaml
+++ b/deploy/complete/helm-chart/provision/templates/secrets-services.yaml
@@ -6,7 +6,7 @@
 
 {{- $name := $svcKey.secrets.oadbName | default (printf "mu%s%s" $svcName (randAlphaNum 12)) | trunc 14 }}
 {{- $user := $svcKey.secrets.oadbUser | default (printf "user%s" (randAlphaNum 12)) }}
-{{- $pass := $svcKey.secrets.oadbPassword | default (randAlphaNum 12) }}
+{{- $pass := $svcKey.secrets.oadbPassword | default (printf "%s%s" (randAlpha 1) (randAlphaNum 12)) }}
 {{- $wpass := $svcKey.secrets.oadbWalletPassword | default (randAlphaNum 12) }}
 
 {{/* Check if need to create ATP secrets for the particular service */}}
