--- a/deploy/complete/helm-chart/provision/values.yaml
+++ b/deploy/complete/helm-chart/provision/values.yaml
@@ -7,7 +7,7 @@ global:
     # Set to true to create a bucket on the object storage service instance
     objectstorage: true
     # Set object storage namespace, usualy the tenancy name or ocid.
-    objectstoragenamespace: ociateam
+    objectstoragenamespace: ocitenancyname
     # Service broker name (used in the service URL)
     name: mushop-osb
     port: 8080
