--- a/deploy/complete/helm-chart/mushop/charts/api/values.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/api/values.yaml
@@ -6,8 +6,7 @@ image:
   pullPolicy: IfNotPresent
 
 env:
-  sessionRedis: session
-  mediaUrl:
+  mediaUrl: /assets
   newsletterSubscribeUrl:
 
 resources:
