--- a/deploy/complete/helm-chart/mushop/charts/user/templates/user-job.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/user/templates/user-job.yaml
@@ -7,6 +7,7 @@ metadata:
   labels: {{ include "user.labels" . | nindent 4 }}
 spec:
   ttlSecondsAfterFinished: 120
+  backoffLimit: 1
   template:
     metadata:
       labels:
