--- a/deploy/complete/helm-chart/mushop/values-dev.yaml
+++ b/deploy/complete/helm-chart/mushop/values-dev.yaml
@@ -4,7 +4,7 @@ global:
   oadbAdminSecret: oadb-admin           # Name of DB Admin secret created earlier
   oadbWalletSecret: oadb-wallet         # Name of wallet secret created earlier
   oadbConnectionSecret: oadb-connection # Name of connection secret created earlier
-  oosBucketParSecret: oos-bucket-par    # Object storage bucket PAR secret name (optional)
+  oosBucketSecret: oos-bucket           # Object storage bucket secret name (optional)
   mock:
     service: "false"
 
@@ -13,7 +13,7 @@ ingress:
 
 api:
   env:
-    mediaUrl:                 # Object Storage URL for catalog image assets
+    mediaUrl:                 # URL for catalog image assets
     newsletterSubscribeUrl:   # Newsletter subscription endpoint (https://[API_GATEWAY_URL]/newsletter/subscribe)
 
 carts:
