fixes the osb.name property to reflect oci-broker and differentiates the cluster broker

--- a/deploy/complete/helm-chart/provision/templates/cluster-service-broker.yaml
+++ b/deploy/complete/helm-chart/provision/templates/cluster-service-broker.yaml
@@ -2,7 +2,7 @@
 apiVersion: servicecatalog.k8s.io/v1beta1
 kind: ClusterServiceBroker
 metadata:
-  name: {{.Values.global.osb.name}}
+  name: oci-cluster-service-broker
   annotations:
     "helm.sh/resource-policy": keep
   labels:
