--- a/deploy/complete/helm-chart/provision/templates/service-binding-global.yaml
+++ b/deploy/complete/helm-chart/provision/templates/service-binding-global.yaml
@@ -36,4 +36,6 @@ metadata:
 spec:
   instanceRef:
     name: {{ .Values.global.osb.instanceName }}-objectstorage
+  parameters:
+    generatePreAuth: true
 {{ end }}
