--- a/src/assets/package.json
+++ b/src/assets/package.json
@@ -1,6 +1,6 @@
 {
   "name": "mushop-assets",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "keywords": [],
@@ -12,9 +12,10 @@
     "deploy": "node deploy.js"
   },
   "dependencies": {
-    "axios": "^0.19.0",
     "dotenv": "^8.1.0",
+    "http-signature": "^1.3.1",
     "mime": "^2.4.4",
+    "node-forge": "^0.9.1",
     "node-static": "^0.7.11"
   },
   "devDependencies": {
