--- a/deploy/complete/helm-chart/mushop/charts/orders/values.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/orders/values.yaml
@@ -2,7 +2,7 @@ replicaCount: 1
 
 image:
   repository: iad.ocir.io/oracle/ateam/mushop-orders
-  tag: 1.1.0
+  tag: 2.0.0
   pullPolicy: IfNotPresent
 
 dbtools:
@@ -22,5 +22,6 @@ env:
   zipkin: zipkin.jaeger.svc.cluster.local
   javaOpts: -Xms128m -Xmx256m -XX:+UseG1GC -Dlogging.level.mushop.orders=TRACE  -Djava.security.egd=file:/dev/urandom -Dspring.zipkin.enabled=false
   tnsAdmin: "/app/config"
+  natsHost: "nats"
 service:
   port: 80
