--- a/deploy/complete/helm-chart/mushop/values.yaml
+++ b/deploy/complete/helm-chart/mushop/values.yaml
@@ -42,13 +42,13 @@ payment:
 session:
   enabled: true
 
-shipping:
-  enabled: true
-
 storefront:
   enabled: true
 
-stream:
+fulfillment:
+  enabled: true
+
+nats:
   enabled: true
 
 user:
