--- a/deploy/complete/helm-chart/mushop/templates/oss-connection-secret.yaml
+++ b/deploy/complete/helm-chart/mushop/templates/oss-connection-secret.yaml
@@ -1,4 +1,5 @@
-{{- if not (or .Values.skip.streaming .Values.global.ossStreamSecret) -}}
+{{- if .Values.tags.streaming -}}
+{{- if not .Values.global.ossStreamSecret -}}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -13,4 +14,5 @@ data:
   streamId: {{ .Values.secrets.streams.streamId | default "" | b64enc | default ("" | quote) }}
   region: {{ .Values.secrets.streams.region | default "" | b64enc | default ("" | quote) }}
   {{- end }}
+{{ end }}
 {{ end }}
