--- a/deploy/complete/helm-chart/mushop/values.yaml
+++ b/deploy/complete/helm-chart/mushop/values.yaml
@@ -11,9 +11,9 @@ global:
   oosBucketSecret:
 
 # Depending on the scenario, certain resources might need to be skipped.
-# For example, --set skip.streaming=true to disable required streaming secrets
-skip:
-  streaming: false
+# For example, --set tags.streaming=false to disable required streaming manifests
+tags:
+  streaming: true
 
 ingress:
   enabled: true
