--- a/deploy/complete/helm-chart/mushop/charts/fulfillment/templates/fulfillment-svc.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/fulfillment/templates/fulfillment-svc.yaml
@@ -2,15 +2,14 @@ apiVersion: v1
 kind: Service
 metadata:
 # TODO: update to shipping.fullname when orders can receive variable
-  name: {{ include "shipping.name" . }}
-  labels: {{ include "shipping.labels" . | nindent 4 }}
+  name: {{ include "fulfillment.name" . }}
+  labels: {{ include "fulfillment.labels" . | nindent 4 }}
 spec:
-  type: NodePort
   selector:
-    app.kubernetes.io/name: {{ include "shipping.name" . }}
+    app.kubernetes.io/name: {{ include "fulfillment.name" . }}
     app.kubernetes.io/instance: {{ .Release.Name }}
-    run: {{ include "shipping.name" . }}
+    run: {{ include "fulfillment.name" . }}
   ports:
     - port: {{ .Values.service.port }}
       protocol: TCP
-      targetPort: 80
+      targetPort: 8099
