--- a/deploy/complete/helm-chart/mushop/charts/fulfillment/templates/tests/test-connection.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/fulfillment/templates/tests/test-connection.yaml
@@ -1,9 +1,9 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: "{{ include "shipping.fullname" . }}-test-connection"
+  name: "{{ include "fulfillment.fullname" . }}-test-connection"
   labels:
-{{ include "shipping.labels" . | indent 4 }}
+{{ include "fulfillment.labels" . | indent 4 }}
   annotations:
     "helm.sh/hook": test-success
 spec:
@@ -11,5 +11,5 @@ spec:
     - name: wget
       image: busybox
       command: ['wget']
-      args:  ['{{ include "shipping.fullname" . }}:{{ .Values.service.port }}']
+      args:  ['{{ include "fulfillment.fullname" . }}:{{ .Values.service.port }}']
   restartPolicy: Never
