Name all ports in Kubernetes services.

--- a/deploy/complete/helm-chart/mushop/charts/api/templates/api-svc.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/api/templates/api-svc.yaml
@@ -10,4 +10,5 @@ spec:
     app.kubernetes.io/instance: {{ .Release.Name }}
   ports:
     - port: {{ .Values.service.port }}
+      name: http
       targetPort: 3000
