--- a/deploy/complete/helm-chart/mushop/charts/stream/templates/stream-svc.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/stream/templates/stream-svc.yaml
@@ -14,6 +14,7 @@ spec:
     run: {{ include "stream.name" .}}
   ports:
     - port: {{ .Values.service.port }}
+      name: http
       protocol: TCP
       targetPort: 80
       #nodePort: 30124
