--- a/deploy/complete/helm-chart/mushop/charts/edge/templates/edge-svc.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/edge/templates/edge-svc.yaml
@@ -11,4 +11,5 @@ spec:
     app.kubernetes.io/instance: {{ .Release.Name }}
   ports:
     - port: {{ .Values.service.port }}
+      name: http
       targetPort: 8080
