--- a/deploy/complete/helm-chart/mushop/charts/shipping/templates/shipping-svc.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/shipping/templates/shipping-svc.yaml
@@ -12,5 +12,6 @@ spec:
     run: {{ include "shipping.name" . }}
   ports:
     - port: {{ .Values.service.port }}
+      name: http
       protocol: TCP
       targetPort: 80
