--- a/deploy/complete/helm-chart/mushop/charts/user/templates/user-svc.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/user/templates/user-svc.yaml
@@ -9,4 +9,5 @@ spec:
     app.kubernetes.io/instance: {{ .Release.Name }}
   ports:
     - port: {{ .Values.service.port }}
+      name: http
       targetPort: 3000
