--- a/deploy/complete/helm-chart/mushop/values.yaml
+++ b/deploy/complete/helm-chart/mushop/values.yaml
@@ -14,6 +14,7 @@ global:
 # For example, --set tags.streaming=false to disable required streaming manifests
 tags:
   streaming: true
+  atp: true
 
 ingress:
   enabled: true
