--- a/src/orders/src/main/resources/application.properties
+++ b/src/orders/src/main/resources/application.properties
@@ -15,9 +15,9 @@ management.metrics.export.prometheus.enabled=true
 logging.level.mushop.*=INFO
 
 mushop.messaging.host=${NATS_HOST:localhost}
-mushop.messaging.port=4222
-mushop.messaging.subjects.orders=mushop-orders
-mushop.messaging.subjects.shipments=mushop-shipments
+mushop.messaging.port=${NATS_PORT:4222}
+mushop.messaging.subjects.orders=${ORDERS_NEW:mushop-orders}
+mushop.messaging.subjects.shipments=${ORDERS_SHIPPED:mushop-shipments}
 
 mushop.orders.oadbservice=${OADB_SERVICE:mock}
 mushop.orders.oadbuser=${OADB_USER:}
