--- a/deploy/complete/helm-chart/mushop/charts/fulfillment/templates/fulfillment-deployment.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/fulfillment/templates/fulfillment-deployment.yaml
@@ -32,3 +32,11 @@ spec:
           env:
             - name: NATS_HOST
               value: "{{ .Release.Name }}-{{ .Values.env.natsHost }}"
+            - name: NATS_PORT
+              value: "{{ .Values.env.natsPort }}"
+            - name: ORDERS_NEW
+              value: "{{ .Values.env.newOrdersSubject }}"
+            - name: ORDERS_SHIPPED
+              value: "{{ .Values.env.shippedOrdersSubject }}"
+            - name: SIMULATION_DELAY
+              value: "{{ .Values.env.simulationDelay }}"
