Changing port for Fulfillment to 80

--- a/deploy/complete/docker-compose/docker-compose.yml
+++ b/deploy/complete/docker-compose/docker-compose.yml
@@ -196,6 +196,8 @@ services:
 # Fulfillment service
   fulfillment:
     image: iad.ocir.io/oracle/ateam/mushop-fulfillment:1.0.0
+    ports: 
+      - 8087:80
     hostname: fulfillment
     restart: always
     cap_drop:
