update provisioning to create stream name from auto-generated secret. To be used as topic

--- a/deploy/complete/helm-chart/provision/values.yaml
+++ b/deploy/complete/helm-chart/provision/values.yaml
@@ -3,7 +3,7 @@ global:
     # Set to true to create a global ATP instance
     atp: true
     # Set to true to create a streaming service instance
-    oss: false
+    oss: true
     # Set to true to create a bucket on the object storage service instance
     objectstorage: true
     # Set object storage namespace, usualy the tenancy name or ocid.
