--- a/deploy/complete/helm-chart/provision/templates/service-instance-global.yaml
+++ b/deploy/complete/helm-chart/provision/templates/service-instance-global.yaml
@@ -35,9 +35,12 @@ spec:
   clusterServiceClassExternalName: oss-service
   clusterServicePlanExternalName: standard
   parameters:
-    name: {{ (printf "MuShop %s Streaming" (randAlphaNum 4)) | quote }}
     compartmentId: {{ required "Value .global.osb.compartmentId is required!" .Values.global.osb.compartmentId | quote }}
     partitions: 1
+  parametersFrom:
+    - secretKeyRef:
+        name: {{ .Values.global.osb.instanceName }}-oss-stream
+        key: streamNameParam
 {{ end }}
 {{ if .Values.global.osb.objectstorage }}
 ---
