--- a/deploy/complete/helm-chart/mushop/requirements.yaml
+++ b/deploy/complete/helm-chart/mushop/requirements.yaml
@@ -9,34 +9,37 @@ dependencies:
     version: 0.1.0
     tags:
       - atp
-  - name: catalogue	
+  - name: catalogue
     version: 0.1.0
     tags:
       - atp
-  - name: edge	
-    version: 0.1.0	
-    condition: edge.enabled	
-  - name: orders	
+  - name: edge
+    version: 0.1.0
+    condition: edge.enabled
+  - name: events
+    version: 0.1.0
+    tags:
+      - streaming
+  - name: orders
     version: 0.1.0
     tags:
       - atp
-  - name: payment	
-    version: 0.1.0	
-    condition: payment.enabled	
-  - name: session	
-    version: 0.1.0	
-    condition: session.enabled	
-  - name: storefront	
-    version: 0.1.0	
-    condition: storefront.enabled	
-  - name: user	
+  - name: payment
+    version: 0.1.0
+    condition: payment.enabled
+  - name: session
+    version: 0.1.0
+    condition: session.enabled
+  - name: storefront
+    version: 0.1.0
+    condition: storefront.enabled
+  - name: user
     version: 0.1.0
     tags:
       - atp
-  - name: fulfillment	
-    version: 0.1.0	
-    condition: fulfillment.enabled	
-  - name: nats	
-    version: 0.1.0	
+  - name: fulfillment
+    version: 0.1.0
+    condition: fulfillment.enabled
+  - name: nats
+    version: 0.1.0
     condition: nats.enabled
-    
