--- a/deploy/complete/helm-chart/mushop/templates/oss-connection-secret.yaml
+++ b/deploy/complete/helm-chart/mushop/templates/oss-connection-secret.yaml
@@ -1,5 +1,5 @@
 {{- if .Values.tags.streaming -}}
-{{- if not .Values.global.ossStreamSecret -}}
+{{- if not (or .Values.global.ossStreamSecret .Values.global.osb.oss) -}}
 apiVersion: v1
 kind: Secret
 metadata:
@@ -7,12 +7,7 @@ metadata:
   labels: {{ include "mushop.labels" . | nindent 4 }}
 type: Opaque
 data:
-  {{- if ne .Values.global.mock.service "all" }}
-  {{/* TODO: deprecate compartment/name as id/region should be all that is required */}}
-  compartmentId: {{ required "Value .secrets.streams.compartmentId is required!" .Values.secrets.streams.compartmentId | b64enc }}
-  streamName: {{ .Values.secrets.streams.streamName | default "" | b64enc | default ("" | quote) }}
   streamId: {{ .Values.secrets.streams.streamId | default "" | b64enc | default ("" | quote) }}
-  region: {{ .Values.secrets.streams.region | default "" | b64enc | default ("" | quote) }}
-  {{- end }}
-{{ end }}
-{{ end }}
+  messageEndpoint: {{ .Values.secrets.streams.messageEndpoint | default "" | b64enc | default ("" | quote) }}
+{{- end -}}
+{{- end -}}
