--- a/deploy/complete/helm-chart/mushop/charts/events/templates/events-deployment.yaml
+++ b/deploy/complete/helm-chart/mushop/charts/events/templates/events-deployment.yaml
@@ -33,10 +33,12 @@ spec:
             - name: http
               containerPort: 8080
           livenessProbe:
+            periodSeconds: 120
             httpGet:
               path: /health
               port: http
           readinessProbe:
+            periodSeconds: 10
             httpGet:
               path: /health
               port: http
