Updated the base image. Fulfillment image is now about 1GB smaller. Bumping version, to keep the old image as well.

--- a/src/fulfillment/Dockerfile
+++ b/src/fulfillment/Dockerfile
@@ -40,7 +40,7 @@ RUN gu install native-image
 RUN native-image --no-server  -cp libs/fulfillment-*-all.jar
 
 # Step 4 : Build the final application image
-FROM oracle/graalvm-ce:19.3.1-java8
+FROM ubuntu:19.10
 EXPOSE 80
 COPY --from=graalvm /home/app/fulfillment/fulfillment /app/fulfillment
 ENTRYPOINT ["/app/fulfillment", "-Djava.library.path=/app"]
