--- a/deploy/complete/helm-chart/provision/templates/secrets-global.yaml
+++ b/deploy/complete/helm-chart/provision/templates/secrets-global.yaml
@@ -58,3 +58,4 @@ type: Opaque
 data:
   streamName: {{ $streamName | b64enc }}
   streamNameParam: {{ printf `{"name":"%s"}` $streamName | b64enc }}
+{{- end }}
